test/functional/failtests/multipleConstructors.txt
SyntaxError: Cannot have multiple constructors in the same object declaration
2 |     new() {}
3 |     new() {}
  |     ^ (3:5)
4 | }

